[gd_scene load_steps=4 format=2]

[ext_resource path="res://fireball_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fireball.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[node name="Fireball" type="Area"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Icosphere1" parent="." instance=ExtResource( 1 )]

[node name="Icosphere2" parent="." instance=ExtResource( 1 )]

[node name="Icosphere3" parent="." instance=ExtResource( 1 )]

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 0.92549, 0.592157, 0.0705882, 1 )
